[tool.poetry]
name = "podcast_release"
version = "0.1.0"
description = ""
authors = ["eucariot <eucariot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.4"
psutil = "^5.8.0"
paramiko = "^2.7.2"
boto = "^2.49.0"
boto3 = "^1.26.33"
pillow = "^9.3.0"
pillar-youtube-upload = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
